[package]
name = "vanadium-app-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common", default-features = false }
critical-section = "1.1.2"
subtle = { version="2.6.1", default-features = false }
hex-literal = "0.4.1"
zeroize = "1.8.1"

# target_vanadium_ledger dependencies (optional)
embedded-alloc = { version = "0.5.1", optional = true }
vanadium-ecalls = { path = "../ecalls", default-features = false, optional = true }

# target_native dependencies (optional)
bip32 = { version = "0.5.2", optional = true }
hex = { version = "0.4.3", optional = true }
hmac = { version = "0.12.1", optional = true }
k256 = { version = "0.13.4", default-features = false, features = ["alloc", "ecdsa-core", "schnorr"], optional = true }
lazy_static = { version = "1.5.0", optional = true }
num-bigint = { version = "0.4.6", optional = true }
num-traits = { version = "0.2.19", optional = true }
rand = { version = "0.9.1", optional = true }
ripemd = { version = "0.1.3", optional = true }
sha2 = { version = "0.10.8", optional = true }

[features]
default = ["target_native"]
target_native = [
    "common/target_native",
    "dep:bip32",
    "dep:hex",
    "dep:hmac",
    "dep:k256",
    "dep:lazy_static",
    "dep:num-bigint",
    "dep:num-traits",
    "dep:rand",
    "dep:ripemd",
    "dep:sha2",
]
target_vanadium_ledger = [
    "common/target_vanadium_ledger",
    "dep:embedded-alloc",
    "vanadium-ecalls/target_vanadium_ledger",
]

# Enable this in V-App's dev-dependencies
test-mode = [] 

[build-dependencies]
common = { path = "../common", features = ["wrapped_serializable"] }
