[package]
name = "include_gif"
version = "1.2.2"
edition = "2021"
license = "Apache-2.0" 
description = "procedural macro that packs a gif image into a byte representation"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
flate2 = "1.0.28"
image = "=0.24.9"

[workspace]

