[package]
name = "vnd-bitcoin-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["target_native"]
target_native = ["sdk/target_native", "bitcoin/target_native"]
target_vanadium_ledger = ["sdk/target_vanadium_ledger", "bitcoin/target_vanadium_ledger"]

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
bitcoin = { version = "0.32.0", features = ["serde"], default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
nom = { version = "7.1.3", default-features = false, features = ["alloc"] }
sdk = { package = "vanadium-app-sdk", path = "../../../app-sdk", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["alloc"] }
subtle = { version="2.6.1", default-features = false }

[dev-dependencies]
hex-literal = "0.4.1"
sdk = { package = "vanadium-app-sdk", path = "../../../app-sdk", default-features = false, features = ["target_native"] }

[profile.release]
opt-level = 3
lto = true

[workspace]

[patch.crates-io.bitcoin]
path = "../../../libs/bitcoin"
[patch.crates-io.bitcoin_hashes]
path = "../../../libs/bitcoin_hashes"
[patch.crates-io.secp256k1]
path = "../../../libs/secp256k1"
[patch.crates-io.base58ck]
path = "../../../libs/base58"
[patch.crates-io.getrandom]
path = "../../../libs/getrandom"
