[package]
name = "vnd-bitcoin-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["target_native"]
target_native = [
    "sdk/target_native",
]
target_vanadium_ledger = [
    "sdk/target_vanadium_ledger",
]
cleartext-decode = []

[dependencies]
bitcoin = { version = "0.32.0", features = ["serde"], default-features = false }
hashes   = { package = "bitcoin_hashes", version = "0.14", default-features = false, features = ["alloc", "io"] }
secp256k1 = { package = "secp256k1", version = "0.29", default-features = false }
base58   = { package = "base58ck", version = "0.1", default-features = false }

base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
macros = { package = "vnd-bitcoin-macros", path = "../macros" }
sdk = { package = "vanadium-app-sdk", path = "../../../app-sdk", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["alloc"] }
subtle = { version="2.6.1", default-features = false }

[dev-dependencies]
hex-literal = "0.4.1"
sdk = { package = "vanadium-app-sdk", path = "../../../app-sdk", default-features = false, features = ["target_native"] }

[build-dependencies]
toml = { version = "0.8", default-features = false, features = ["parse"] }
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true

[workspace]
