[package]
name = "vndbench-_baseline"
version = "0.1.0"
edition = "2021"

[package.metadata.vapp]
name = "Bench baseline"
stack_size = 65536

[package.metadata.benchmark]
baseline = true
repetitions = 1

[features]
default = ["target_native"]
target_native = ["sdk/target_native"]
target_vanadium_ledger = ["sdk/target_vanadium_ledger"]

[dependencies]
sdk = { package = "vanadium-app-sdk", path = "../../../app-sdk", default-features = false }

[workspace]
