[package]
name = "bench-psbtv2_parse"
version = "0.1.0"
edition = "2021"

[package.metadata.vapp]
name = "Parse PSBTv2"
stack_size = 65536

[package.metadata.benchmark]
repetitions = 20

[features]
default = ["target_native"]
target_native = ["sdk/target_native"]
target_vanadium_ledger = ["sdk/target_vanadium_ledger"]

[dependencies]
common = { package = "vnd-bitcoin-common", path = "../../../common", default-features = false }
hex-literal = "0.4.1"
sdk = { package = "vanadium-app-sdk", path = "../../../../../app-sdk", default-features = false }

[workspace]

[patch.crates-io.bitcoin]
path = "../../../../../libs/bitcoin"
[patch.crates-io.bitcoin_hashes]
path = "../../../../../libs/bitcoin_hashes"
[patch.crates-io.secp256k1]
path = "../../../../../libs/secp256k1"
[patch.crates-io.base58ck]
path = "../../../../../libs/base58"
[patch.crates-io.getrandom]
path = "../../../../../libs/getrandom"
